# robot_navigation_sim

./: .gitignore  ALGORITHM_GUIDE.md  MAP_CREATION_GUIDE.md  MODERN_UI_GUIDE.md  QUICK_START.md  README.md  RL_QUICKREF.md  add_start_positions.py  list_maps.py  migrate_maps.py  preview_all_maps.sh  pyproject.toml  requirements.txt  rl_tui.py
maps/challenge/: README.md  obstacles.npy  start.npy  target.npy
maps/custom_map/: obstacles.npy  start.npy
maps/dense_forest/: obstacles.npy  start.npy  target.npy
maps/mines/: obstacles.npy  start.npy  target.npy
maps/mixed_complexity/: obstacles.npy  start.npy  target.npy
maps/narrow_corridors/: obstacles.npy  start.npy  target.npy
maps/open_field/: obstacles.npy  start.npy  target.npy
maps/passage/: obstacles.npy
maps/scattered_rocks/: obstacles.npy
maps/squares/: obstacles.npy  start.npy  target.npy
maps/triangles/: obstacles.npy  start.npy  target.npy
maps/u_shaped_trap/: obstacles.npy  start.npy  target.npy
rl/: CHANGELOG.md  GENERALIZATION.md  INDEX.md  README.md  RL_GUIDE.md  TESTING_COMPLETE.md  TEST_POLICIES.md  TUI_GUIDE.md  TUI_MULTIMAP.md  __init__.py  simple_rl_example.py  test_policy_headless.py  test_policy_visual.py  test_random_policy.py  train_multi_map.py  train_rl.py
src/: config.py  environment.py  gym_env.py  main.py  modern_renderer.py  renderer.py  robot.py  sonar.py  ui_components.py
src/algorithms/: __init__.py  base.py  (+4 more)
tools/: __init__.py  create_challenge_map.py  create_diverse_maps.py  create_map.py  map_editor.py  preview_map.py
user_algorithms/: __init__.py  template.py
